--- a/index.html
+++ b/index.html
@@ -202,85 +202,116 @@
   </section>
   <!--/ Section My Repo End /-->
 
-  <!--/ Section Contact-Footer Star /-->
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
-    <div class="overlay-mf"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="contact-mf">
-            <div id="contact" class="box-shadow-full">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="title-box-2">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="title-box-2 pt-4 pt-md-0">
-                    <h5 class="title-left">
-                      Get in Touch
-                    </h5>
-                  </div>
-                  <div class="more-info">
-                    <p class="lead">
-                      <strong>Interested in working together?</strong>     
-                    </p>
-                    <ul class="list-ico">
-                      <li><span class="ion-ios-telephone"></span>+30 698-631-9591</li>
-                      <li><span class="ion-ios-email"></span>baltimas.dion@gmail.com</li>
-                    </ul>
-                  </div>
-                  <div class="socials">
-                    <h6><strong>Find me on</strong></h6>
-                    <ul>
-                      <li><a href="https://github.com/DionBalt?tab=repositories" target="_blank"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
-                      <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
-                      <li><a href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS" target="_blank"><span class="ico-circle"><i class="fa fa-user" aria-hidden="true"></i></span></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--Footer-->
-    <footer>
+     <!--/ Section Contact-Footer Star /-->
+    <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
+      <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <div class="copyright-box">
-              <p class="copyright">&copy; Copyright <strong>My Website</strong>. All Rights Reserved</p>
-              <div class="credits">
+            <div class="contact-mf">
+              <div id="contact" class="box-shadow-full">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="title-box-2"></div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="title-box-2 pt-4 pt-md-0">
+                      <h5 class="title-left">Get in Touch</h5>
+                    </div>
+                    <div class="more-info">
+                      <p class="lead">
+                        <strong>Interested in working together?</strong>
+                      </p>
+                      <ul class="list-ico">
+                        <li>
+                          <a
+                            href="mailto:baltimas.dion@gmail.com"
+                            class="ion-ios-email"
+                          >
+                            baltimas.dion@gmail.com
+                          </a>
+                        </li>
+                        <li>
+                          <a href="tel:+306986319591" class="ion-ios-telephone">
+                            +30 698-631-9591
+                          </a>
+                        </li>
+                        <li>
+                          <a
+                            href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS"
+                            target="_blank"
+                            class="ion-ios-cloud-download"
+                          >
+                            My CV
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="socials">
+                      <h6><strong>Find me on</strong></h6>
+                      <ul>
+                        <li>
+                          <a
+                            href="https://github.com/DionBalt?tab=repositories"
+                            target="_blank"
+                            ><span class="ico-circle"
+                              ><i class="fa fa-github"></i></span
+                          ></a>
+                        </li>
+                        <li>
+                          <a
+                            href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+                            target="_blank"
+                            ><span class="ico-circle"
+                              ><i class="fa fa-linkedin-square"></i></span
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </footer>
-  </section>
-  <!--/ Section Contact-footer End /-->
+      <!--Footer-->
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="copyright-box">
+                <p class="copyright">
+                  &copy; Copyright <strong>My Website</strong>. All Rights
+                  Reserved
+                </p>
+                <div class="credits"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </section>
+    <!--/ Section Contact-footer End /-->
 
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-  <div id="preloader"></div>
+    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <div id="preloader"></div>
 
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/popper/popper.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/counterup/jquery.waypoints.min.js"></script>
-  <script src="lib/counterup/jquery.counterup.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/lightbox/js/lightbox.min.js"></script>
-  <script src="lib/typed/typed.min.js"></script>
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+    <!-- JavaScript Libraries -->
+    <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/jquery/jquery-migrate.min.js"></script>
+    <script src="lib/popper/popper.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/counterup/jquery.waypoints.min.js"></script>
+    <script src="lib/counterup/jquery.counterup.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="lib/typed/typed.min.js"></script>
+    <!-- Contact Form JavaScript File -->
+    <script src="contactform/contactform.js"></script>
 
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
-
-</body>
+    <!-- Template Main Javascript File -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
