--- a/index.html
+++ b/index.html
@@ -129,79 +129,153 @@
   </section>
  <!--/End About Section /-->
 
-  <!--/ Section My Repo Star /-->
-  <section class="section projects is-medium is-white has-text-centered">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="title-box text-center">
-             <h3 class="title-a">
-               My Repository
-             </h3>
-             <h2 class="subtitle-a">Here are a few past design projects I've worked on. Want to see more?</h2>
-            <div class="line-mf"></div>
+    <!--/ Section My Repo Star /-->
+    <section class="section projects is-medium is-white has-text-centered">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">My Repository</h3>
+              <h2 class="subtitle-a">
+                Here are a few past design projects I've worked on. Want to see
+                more?
+              </h2>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-grid">
+          <div class="columns is-multiline is-mobile">
+            <div
+              class="column is-12-mobile is-half-tablet is-one-third-desktop"
+            >
+              <figure class="image is-3by2">
+                <img class="project-thumb" src="img/work-1.png" />
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">
+                    My NotePad
+                  </h1>
+                  <a
+                    class="button is-primary is-outlined is-rounded"
+                    href="https://github.com/DionBalt/NotePad"
+                    target="_blank"
+                    ><span>Visit GitHub</span></a
+                  >
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div
+              class="column is-12-mobile is-half-tablet is-one-third-desktop"
+            >
+              <figure class="image is-3by2">
+                <img class="project-thumb" src="img/work-2.png" />
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">
+                    Chrome-Extension
+                  </h1>
+                  <a
+                    class="button is-primary is-outlined is-rounded"
+                    href="https://github.com/DionBalt/Chrome-Extension"
+                    target="_blank"
+                    ><span>Visit GitHub</span></a
+                  >
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div
+              class="column is-12-mobile is-half-tablet is-one-third-desktop"
+            >
+              <figure class="image is-3by2">
+                <img class="project-thumb" src="img/work-3.png" />
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">
+                    Angular Calculator App
+                  </h1>
+                  <a
+                    class="button is-primary is-outlined is-rounded"
+                    href="https://github.com/DionBalt/Tic-Tac-Toe"
+                    target="_blank"
+                    ><span>Visit GitHub</span></a
+                  >
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div
+              class="column is-12-mobile is-half-tablet is-one-third-desktop"
+            >
+              <figure class="image is-3by2">
+                <img class="project-thumb" src="img/work-4.jpg" />
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">
+                    Image Classification In Machine Learning Models
+                  </h1>
+                  <a
+                    class="button is-primary is-outlined is-rounded"
+                    href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Classification.ipynb"
+                    target="_blank"
+                    ><span>Visit GitHub</span></a
+                  >
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div
+              class="column is-12-mobile is-half-tablet is-one-third-desktop"
+            >
+              <figure class="image is-3by2">
+                <img class="project-thumb" src="img/work-5.jpg" />
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">
+                    Image Generator In Machine Learning Models
+                  </h1>
+                  <a
+                    class="button is-primary is-outlined is-rounded"
+                    href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Generator.ipynb"
+                    target="_blank"
+                    ><span>Visit GitHub</span></a
+                  >
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+            <div
+              class="column is-12-mobile is-half-tablet is-one-third-desktop"
+            >
+              <figure class="image is-3by2">
+                <img class="project-thumb" src="img/work-6.png" />
+                <figcaption>
+                  <h1 class="title is-size-5 is-size-4-widescreen">
+                    Coffee Brew App with Angular Bootstrap
+                  </h1>
+                  <a
+                    class="button is-primary is-outlined is-rounded"
+                    href="http://coffeeappbrew.epizy.com/?i=1"
+                    target="_blank"
+                    >Visit Website</a
+                  >
+                </figcaption>
+                <div class="overlay"></div>
+              </figure>
+            </div>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column">
+            <a
+              class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal"
+              href="https://github.com/DionBalt"
+              target="_blank"
+            >
+              GitHub Repository
+            </a>
           </div>
         </div>
       </div>
-      <div class="project-grid">  
-        <div class="columns is-multiline is-mobile">
-          <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-            <figure class="image is-3by2"><img class="project-thumb" src="img/work-1.png">
-              <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">My NotePad</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/NotePad" target="_blank"><span>Visit GitHub</span></a>
-              </figcaption>
-              <div class="overlay"></div>
-            </figure>
-          </div>
-          <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
-            <figure class="image is-3by2"><img class="project-thumb" src="img/work-2.jpg">
-              <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Tip Calculator</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tip-Calculator" target="_blank"><span>Visit GitHub</span></a>
-              </figcaption>
-              <div class="overlay"></div>
-            </figure>
-          </div>
-          <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-            <figure class="image is-3by2"><img class="project-thumb" src="img/work-3.png">
-              <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Angular Calculator App</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Angular-Calculator" target="_blank"><span>Visit GitHub</span></a>
-              </figcaption>
-              <div class="overlay"></div>
-            </figure>
-          </div>
-          <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-            <figure class="image is-3by2"><img class="project-thumb" src="img/work-4.jpg">
-              <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Image Classification In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Classification.ipynb" target="_blank"><span>Visit GitHub</span></a>
-              </figcaption>
-              <div class="overlay"></div>
-            </figure>
-          </div>
-          <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
-            <figure class="image is-3by2"><img class="project-thumb" src="img/work-5.jpg">
-              <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Image Generator In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Generator.ipynb" target="_blank"><span>Visit GitHub</span></a>
-              </figcaption>
-              <div class="overlay"></div>
-            </figure>
-          </div>
-          <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
-            <figure class="image is-3by2"><img class="project-thumb" src="img/work-6.png">
-              <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Coffee Brew App with Angular Bootstrap</h1><a class="button is-primary is-outlined is-rounded" href="http://coffeeappbrew.epizy.com/?i=1" target="_blank"><span>Visit Website</span></a>
-              </figcaption>
-              <div class="overlay"></div>
-            </figure>
-          </div>
-        </div>
-      </div>
-      <div class="columns is-centered">
-        <div class="column"><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="https://github.com/DionBalt?tab=repositories" target="_blank"><span>GitHub Repository</span></a></div>
-      </div>
-    </div>
-  </section>
-  <!--/ Section My Repo End /-->
-
+    </section>
+    <!--/ Section My Repo End /-->
      <!--/ Section Contact-Footer Star /-->
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
       <div class="overlay-mf"></div>
