--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <div class="col-sm-12">
               <div class="copyright-box">
                 <p class="copyright">
-                  &copy; Copyright <strong>My Website</strong>. All Rights
+                  &copy; 2023 Copyright <strong>My Website</strong>. All Rights
                   Reserved
                 </p>
                 <div class="credits"></div>
