--- a/index.html
+++ b/index.html
@@ -1,133 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Personal Portfolio</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <head>
+    <meta charset="utf-8" />
+    <title>Personal Portfolio</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="" name="keywords" />
+    <meta content="" name="description" />
 
-  <!-- Favicons -->
-  <link href="img/apple-touch-icon.jfif" rel="icon">
-  <link href="img/favicon.jfif" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="img/apple-touch-icon.jfif" rel="icon" />
+    <link href="img/favicon.jfif" rel="apple-touch-icon" />
 
-  <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS File -->
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <!-- Libraries CSS Files -->
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
 
-  <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
-</head>
+    <!-- Main Stylesheet File -->
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
 
-<body id="page-top">
-
-  <!--/ Nav Star /--> 
-  <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Personal Portfolio</a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">About</a>
-          </li>        
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">Repository</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact">Contact</a>
-          </li>
-        </ul>
+  <body id="page-top">
+    <!--/ Nav Star /-->
+    <nav
+      class="navbar navbar-b navbar-trans navbar-expand-md fixed-top"
+      id="mainNav"
+    >
+      <div class="container">
+        <a class="navbar-brand js-scroll" href="#page-top"
+          >Personal Portfolio</a
+        >
+        <button
+          class="navbar-toggler collapsed"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarDefault"
+          aria-controls="navbarDefault"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div
+          class="navbar-collapse collapse justify-content-end"
+          id="navbarDefault"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link js-scroll active" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="#about">Repository</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!--/ Nav End /-->
+    </nav>
+    <!--/ Nav End /-->
 
-  <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro.jpg)">
-    <div class="overlay-itro"></div>
-    <div class="intro-content display-table">
-      <div class="table-cell">
-        <div class="container">
-          <h1 class="intro-title mb-4">I am Dionysios Baltimas</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">WELCOME TO MY WEBSITE,Web Developer,Frontend Developer,Angular Developer</span><strong class="text-slider"></strong></p>
+    <!--/ Intro Skew Star /-->
+    <div
+      id="home"
+      class="intro route bg-image"
+      style="background-image: url(img/intro.jpg)"
+    >
+      <div class="overlay-itro"></div>
+      <div class="intro-content display-table">
+        <div class="table-cell">
+          <div class="container">
+            <h1 class="intro-title mb-4">I am Dionysios Baltimas</h1>
+            <p class="intro-subtitle">
+              <span class="text-slider-items"
+                >Welcome to My Personal Portfolio,Web Developer,Frontend Developer,Angular
+                Developer</span
+              ><strong class="text-slider"></strong>
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!--/ Intro Skew End /-->
+    <!--/ Intro Skew End /-->
 
-  <!--/ About Section /-->
-  <section id="about" class="about-mf sect-pt4 route">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="box-shadow-full">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="row">
-                  <div class="col-sm-6 col-md-5">
-                    <div class="about-img">
-                      <img src="" class="img-fluid rounded b-shadow-a" alt="">
+    <!--/ About Section /-->
+    <section id="about" class="about-mf sect-pt4 route">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="box-shadow-full">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-sm-6 col-md-5">
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-ms-6 col-ms-7">
-                    <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Dionysios Baltimas</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Frontend Developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>baltimas.dion@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+30 698-631-9591</span></p>
+                    <div class="col-ms-6 col-ms-7">
+                      <div class="about-info">
+                        <p>
+                          <span class="title-s">Name: </span>
+                          <span class="title-sa"><i>Dionysios Baltimas</i></span>
+                        </p>
+                        <p>
+                          <span class="title-s">Profile: </span>
+                          <span class="title-sa"><i>FrontEnd Developer</i></span>
+                        </p>
+                        <p>
+                          <span class="title-s">Email: </span>
+                          <span class="title-sa"><i>baltimas.dion@gmail.com</i></span>
+                        </p>
+                        <p>
+                          <span class="title-s">Phone: </span>
+                          <span class="title-sa"><i></i>+30 698-631-9591</i></span>
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="about-me pt-4 pt-md-0">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
-                      About me
-                    </h5>
+                <div class="col-md-12">
+                  <div class="about-me pt-4 pt-md-0">
+                    <div class="title-box-2">
+                      <h5 class="title-left">About me</h5>
+                    </div>
+                    <p class="lead">
+                      I am proficient in Angular and associated technologies,
+                      including HTML, CSS, and JavaScript. My extensive
+                      knowledge in these areas has allowed me to design and
+                      implement user-friendly interfaces for various projects.
+                      My hands-on experience with Angular frameworks has enabled
+                      me to create responsive, efficient, and highly interactive
+                      web applications that meet client requirements. I have a
+                      thorough understanding of Angular's core principles, such
+                      as modularity, dependency injection, and directives.
+                    </p>
+                    <p class="lead">
+                      Furthermore, my strong communication skills and
+                      problem-solving abilities, long with my expertise in
+                      Angular technology, enable me to collaborate effectively
+                      with others to identify and resolve technical challenges.
+                      I am confident in my ability to deliver high-quality
+                      results and strive to continuously improve my skills and
+                      knowledge in this field.
+                    </p>
                   </div>
-                  <p class="lead">
-                   I am proficient in Angular and associated technologies, including 
-                   HTML, CSS, and JavaScript. My extensive knowledge in these areas 
-                   has allowed me to design and implement user-friendly interfaces 
-                   for various projects. My hands-on experience with Angular frameworks 
-                   has enabled me to create responsive, efficient, and highly interactive 
-                   web applications that meet client requirements. I have a thorough 
-                   understanding of Angular's core principles, such as modularity, 
-                   dependency injection, and directives.
-                   </p>
-                   <p class="lead">
-                   Furthermore, my strong communication skills and problem-solving abilities, 
-                   long with my expertise in Angular technology, enable me to collaborate 
-                   effectively with others to identify and resolve technical challenges. I am 
-                   confident in my ability to deliver high-quality results and strive to continuously 
-                   improve my skills and knowledge in this field.
-                   </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
- <!--/End About Section /-->
+    </section>
+    <!--/End About Section /-->
 
     <!--/ Section My Repo Star /-->
     <section class="section projects is-medium is-white has-text-centered">
@@ -276,10 +310,10 @@
       </div>
     </section>
     <!--/ Section My Repo End /-->
-     <!--/ Section Contact-Footer Star /-->
+    <!--/ Section Contact-Footer Star /-->
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
       <div class="overlay-mf"></div>
-      <div class="container">
+      <div class="">
         <div class="row">
           <div class="col-sm-12">
             <div class="contact-mf">
