--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </p>
                         <p>
                           <span class="title-s">Phone: </span>
-                          <span class="title-sa"><i></i>+30 698-631-9591</i></span>
+                          <span class="title-sa"><i>+30 698-631-9591</i></span>
                         </p>
                       </div>
                     </div>
