--- a/index.html
+++ b/index.html
@@ -282,13 +282,13 @@
                 <img class="project-thumb" src="img/work-6.png" />
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">
-                    Coffee Brew App with Angular Bootstrap
+                    Movies DataBase with Angular Bootstrap
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
                     href="http://coffeeappbrew.epizy.com/?i=1"
                     target="_blank"
-                    >Visit Website</a
+                    >Visit GitHub</a
                   >
                 </figcaption>
                 <div class="overlay"></div>
@@ -299,7 +299,7 @@
         <div class="columns is-centered">
           <div class="column">
             <a
-              class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal"
+              class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal text-white"
               href="https://github.com/DionBalt"
               target="_blank"
             >
@@ -322,13 +322,13 @@
                   <div class="col-md-6">
                     <div class="title-box-2"></div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-12">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">Get in Touch</h5>
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        <strong>Interested in working together?</strong>
+                        <h4><strong>Interested in working together?</strong></h4>
                       </p>
                       <ul class="list-ico">
                         <li>
