--- a/index.html
+++ b/index.html
@@ -96,44 +96,42 @@
 
     <!--/ About Section /-->
     <section id="about" class="about-mf sect-pt4 route">
-      <div class="container-fluid">
+        <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <div class="box-shadow-full">
-              <div class="row">
+           <div class="box-shadow-full">
+            <div class="row">
                 <div class="col-md-6">
-                  <div class="row">
-                    <div class="col-sm-6 col-md-5">
-                      </div>
+                    <div class="row">
+                      <div class="col-sm-6 col-md-5"></div>
                     </div>
                     <div class="col-ms-6 col-ms-7">
-                      <div class="about-info">
-                        <p>
-                          <span class="title-s">Name: </span>
-                          <span class="title-sa"><i>Dionysios Baltimas</i></span>
-                        </p>
-                        <p>
-                          <span class="title-s">Profile: </span>
-                          <span class="title-sa"><i>FrontEnd Developer</i></span>
-                        </p>
-                        <p>
-                          <span class="title-s">Email: </span>
-                          <span class="title-sa"><i>baltimas.dion@gmail.com</i></span>
-                        </p>
-                        <p>
-                          <span class="title-s">Phone: </span>
-                          <span class="title-sa"><i>+30 698-631-9591</i></span>
-                        </p>
-                      </div>
+                        <div class="about-info">
+                          <p>
+                            <span class="title-s">Name: </span>
+                            <span class="title-sa"><i>Dionysios Baltimas</i></span>
+                          </p>
+                          <p>
+                            <span class="title-s">Profile: </span>
+                            <span class="title-sa"><i>FrontEnd Developer</i></span>
+                          </p>
+                          <p>
+                            <span class="title-s">Email: </span>
+                            <span class="title-sa"><i>baltimas.dion@gmail.com</i></span>
+                          </p>
+                          <p>
+                            <span class="title-s">Phone: </span>
+                            <span class="title-sa"><i>+30 698-631-9591</i></span>
+                          </p>
+                        </div>
                     </div>
-                  </div>
                 </div>
                 <div class="col-md-12">
-                  <div class="about-me pt-4 pt-md-0">
-                    <div class="title-box-2">
-                      <h5 class="title-left">About me</h5>
-                    </div>
-                    <p class="lead">
+                    <div class="about-me pt-4 pt-md-0">
+                      <div class="title-box-2">
+                        <h5 class="title-left">About me</h5>
+                      </div>
+                      <p class="lead"><i>
                       I am proficient in Angular and associated technologies,
                       including HTML, CSS, and JavaScript. My extensive
                       knowledge in these areas has allowed me to design and
@@ -142,24 +140,23 @@
                       me to create responsive, efficient, and highly interactive
                       web applications that meet client requirements. I have a
                       thorough understanding of Angular's core principles, such
-                      as modularity, dependency injection, and directives.
-                    </p>
-                    <p class="lead">
-                      Furthermore, my strong communication skills and
-                      problem-solving abilities, long with my expertise in
-                      Angular technology, enable me to collaborate effectively
-                      with others to identify and resolve technical challenges.
-                      I am confident in my ability to deliver high-quality
-                      results and strive to continuously improve my skills and
-                      knowledge in this field.
-                    </p>
-                  </div>
+                      as modularity, dependency injection, and directives.</i>
+                     </p>
+                     <p class="lead"><i>Furthermore, my strong communication skills and
+                        problem-solving abilities, long with my expertise in
+                        Angular technology, enable me to collaborate effectively
+                        with others to identify and resolve technical challenges.
+                        I am confident in my ability to deliver high-quality
+                        results and strive to continuously improve my skills and
+                        knowledge in this field.</i>
+                     </p>
+                    </div>
                 </div>
-              </div>
             </div>
+           </div>
           </div>
         </div>
-      </div>
+    </div>
     </section>
     <!--/End About Section /-->
 
@@ -177,7 +174,7 @@
               <div class="line-mf"></div>
             </div>
           </div>
-        </div>
+         </div>
         <div class="project-grid">
           <div class="columns is-multiline is-mobile">
             <div
@@ -282,7 +279,7 @@
                 <img class="project-thumb" src="img/work-6.png" />
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">
-                    Movies DataBase with Angular Bootstrap
+                    Movies Database App using Angular
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
@@ -327,9 +324,7 @@
                       <h5 class="title-left">Get in Touch</h5>
                     </div>
                     <div class="more-info">
-                      <p class="lead">
-                        <h4><strong>Interested in working together?</strong></h4>
-                      </p>
+                      <p><h4><strong>Interested in working together?</strong></h4></p>
                       <ul class="list-ico">
                         <li>
                           <a
@@ -408,13 +403,11 @@
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/popper/popper.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/counterup/jquery.waypoints.min.js"></script>
     <script src="lib/counterup/jquery.counterup.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="lib/typed/typed.min.js"></script>
     <!-- Contact Form JavaScript File -->
     <script src="contactform/contactform.js"></script>
