--- a/index.html
+++ b/index.html
@@ -26,50 +26,37 @@
   </head>
 
   <body id="page-top">
-    <!--/ Nav Star /-->
-    <nav
-      class="navbar navbar-b navbar-trans navbar-expand-md fixed-top"
-      id="mainNav"
-    >
-      <div class="container">
-        <a class="navbar-brand js-scroll" href="#page-top"
-          >Personal Portfolio</a
-        >
-        <button
-          class="navbar-toggler collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarDefault"
-          aria-controls="navbarDefault"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-        <div
-          class="navbar-collapse collapse justify-content-end"
-          id="navbarDefault"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link js-scroll active" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll" href="#about">Repository</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll" href="#contact">Contact</a>
-            </li>
-          </ul>
-        </div>
+
+      <!--/ Nav Star /-->
+  <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll" href="#page-top">Personal Portfolio</a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll active" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#repository">Repository</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#contact">Contact</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!--/ Nav End /-->
+    </div>
+  </nav>
+  <!--/ Nav End /-->
+
 
     <!--/ Intro Skew Star /-->
     <div
@@ -94,18 +81,18 @@
     </div>
     <!--/ Intro Skew End /-->
 
+
+
     <!--/ About Section /-->
     <section id="about" class="about-mf sect-pt4 route">
         <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12">
-           <div class="box-shadow-full">
-            <div class="row">
-                <div class="col-md-6">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="box-shadow-full">
+                <div class="row">
+                  <div class="col-md-6">
                     <div class="row">
-                      <div class="col-sm-6 col-md-5"></div>
-                    </div>
-                    <div class="col-ms-6 col-ms-7">
+                      <div class="col-sm-6 col-md-7">
                         <div class="about-info">
                           <p>
                             <span class="title-s">Name: </span>
@@ -124,25 +111,26 @@
                             <span class="title-sa"><i>+30 698-631-9591</i></span>
                           </p>
                         </div>
+                      </div>
                     </div>
-                </div>
-                <div class="col-md-12">
+                  </div>
+                  <div class="col-md-6">
                     <div class="about-me pt-4 pt-md-0">
                       <div class="title-box-2">
                         <h5 class="title-left">About me</h5>
                       </div>
                       <p class="lead"><i>
-                      I am proficient in Angular and associated technologies,
-                      including HTML, CSS, and JavaScript. My extensive
-                      knowledge in these areas has allowed me to design and
-                      implement user-friendly interfaces for various projects.
-                      My hands-on experience with Angular frameworks has enabled
-                      me to create responsive, efficient, and highly interactive
-                      web applications that meet client requirements. I have a
-                      thorough understanding of Angular's core principles, such
-                      as modularity, dependency injection, and directives.</i>
-                     </p>
-                     <p class="lead"><i>Furthermore, my strong communication skills and
+                        I am proficient in Angular and associated technologies,
+                        including HTML, CSS, and JavaScript. My extensive
+                        knowledge in these areas has allowed me to design and
+                        implement user-friendly interfaces for various projects.
+                        My hands-on experience with Angular frameworks has enabled
+                        me to create responsive, efficient, and highly interactive
+                        web applications that meet client requirements. I have a
+                        thorough understanding of Angular's core principles, such
+                        as modularity, dependency injection, and directives.</i>
+                       </p>
+                       <p class="lead"><i>Furthermore, my strong communication skills and
                         problem-solving abilities, long with my expertise in
                         Angular technology, enable me to collaborate effectively
                         with others to identify and resolve technical challenges.
@@ -151,17 +139,18 @@
                         knowledge in this field.</i>
                      </p>
                     </div>
+                  </div>
                 </div>
+              </div>
             </div>
-           </div>
           </div>
         </div>
-    </div>
-    </section>
+      </section>
+  
     <!--/End About Section /-->
 
     <!--/ Section My Repo Star /-->
-    <section class="section projects is-medium is-white has-text-centered">
+    <section id="repository" class="section projects is-medium is-white has-text-centered">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -307,8 +296,10 @@
       </div>
     </section>
     <!--/ Section My Repo End /-->
+
+
     <!--/ Section Contact-Footer Star /-->
-    <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route">
       <div class="overlay-mf"></div>
       <div class="">
         <div class="row">
@@ -378,7 +369,10 @@
           </div>
         </div>
       </div>
-      <!--Footer-->
+    </section>
+
+     <!--Footer-->
+     <section>
       <footer>
         <div class="container">
           <div class="row">
