--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <p class="lead">
                       <i
                         >Furthermore, my strong communication skills and
-                        problem-solving abilities, long with my expertise in
+                        problem-solving abilities, along with my expertise in
                         Angular technology, enable me to collaborate effectively
                         with others to identify and resolve technical
                         challenges. I am confident in my ability to deliver
