--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
-                    href="https://github.com/DionBalt/Movies-Database-App"
+                    href="movies-dbase.netlify.app"
                     target="_blank"
-                    >Visit GitHub</a
+                    >Visit Website</a
                   >
                 </figcaption>
                 <div class="overlay"></div>
