--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@
               class="column is-12-mobile is-half-tablet is-one-third-desktop"
             >
               <figure class="image is-3by2">
-                <img class="project-thumb" src="img/work-3.png" />
+                <img class="project-thumb" src="img/work-6.png" />
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">
-                    Angular Calculator App
+                    Movies Database App using Angular
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
-                    href="https://github.com/DionBalt/Angular-Calculator"
+                    href="https://movies-dbase.netlify.app"
                     target="_blank"
-                    ><span>Visit GitHub</span></a
+                    ><span>Visit Website</span></a
                   >
                 </figcaption>
                 <div class="overlay"></div>
@@ -291,16 +291,16 @@
               class="column is-12-mobile is-half-tablet is-one-third-desktop"
             >
               <figure class="image is-3by2">
-                <img class="project-thumb" src="img/work-6.png" />
+                <img class="project-thumb" src="img/work-3.png" />
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">
-                    Movies Database App using Angular
+                    Angular-Calculator App
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
                     href="https://movies-dbase.netlify.app"
                     target="_blank"
-                    >Visit website</a
+                    >Visit GitHub</a
                   >
                 </figcaption>
                 <div class="overlay"></div>
