--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
-                    href="https://movies-dbase.netlify.app"
+                    href="https://movies-dbase-app.netlify.app"
                     target="_blank"
                     ><span>Visit Website</span></a
                   >
